# UNO-in-C

./: CMakeLists.txt  Doxyfile  README.md  assignment.sh  contributors.txt  demo  uno.sh
conf/: function.c
conf/Terminal/: terminalrc
conf/xfce4/terminal/: terminalrc
doc/: doxygen_sqlite3.db
doc/html/: README_8md.html  annotated.html  assignment2_8c.html  classes.html  conf_2function_8c.html  demo_8c.html  dir_60c1e009daff386049faf4e676bb6db8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  function_8h.html  function_8h_source.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_p.html  globals_q.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_v.html  globals_vars.html  globals_w.html  (+16 more)
doc/html/search/: all_0.js  all_1.js  (+72 more)
doc/latex/: annotated.tex  assignment2_8c.tex  conf_2function_8c.tex  demo_8c.tex  dir_60c1e009daff386049faf4e676bb6db8.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  function_8h.tex  md_README.tex  refman.tex  src_2function_8c.tex  structcard.tex  structdeck.tex  structplayer.tex  uno_8c.tex  window_8c.tex  window_8h.tex
html/: graph_legend.html  index.html
latex/: refman.tex
saves/: uno.save
src/: CMakeLists.txt  assignment2.c  demo.c  function.c  function.h  uno.c  window.c  window.h
